// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SIMPLELINKUI SNAPSHOTS TESTS bright SIMPLELINKUI should not be changed 1`] = `
<a
  class="link link_bright"
  href="/"
>
  Ссылка
</a>
`;

exports[`SIMPLELINKUI SNAPSHOTS TESTS dim SIMPLELINKUI should not be changed 1`] = `
<a
  class="link link_dim"
  href="/"
>
  Ссылка
</a>
`;
